Rename classes and methods as suggested